fix hub images on tablet

--- a/app/assets/stylesheets/hub.sass
+++ b/app/assets/stylesheets/hub.sass
@@ -31,3 +31,17 @@
 
 body.hubs
   background-color: whitesmoke
+
+.is-one-third-tablet
+  @media (min-width:500px) and (max-width:880px)
+    width: 33%
+    display: inline-block
+    height: 400px !important
+    background-position: center
+    border-radius: $radius-large !important
+
+
+.is-two-thirds-tablet
+  @media (min-width:500px) and (max-width:880px)
+    width: 65%
+    display: inline-block
